WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272340
AX: Change AXCoreObject::selectedChildren() to return an optional instead of an empty Vector.
https://bugs.webkit.org/show_bug.cgi?id=272340
Summary
AX: Change AXCoreObject::selectedChildren() to return an optional instead of ...
Andres Gonzalez
Reported
2024-04-08 10:38:01 PDT
.
Attachments
Patch
(23.66 KB, patch)
2024-04-08 10:42 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(23.68 KB, patch)
2024-04-08 13:37 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(28.22 KB, patch)
2024-04-09 06:53 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-08 10:38:15 PDT
<
rdar://problem/126083608
>
Andres Gonzalez
Comment 2
2024-04-08 10:42:01 PDT
Created
attachment 470818
[details]
Patch
Andres Gonzalez
Comment 3
2024-04-08 13:37:14 PDT
Created
attachment 470820
[details]
Patch
Andres Gonzalez
Comment 4
2024-04-09 06:53:48 PDT
Created
attachment 470836
[details]
Patch
EWS
Comment 5
2024-04-09 10:50:37 PDT
Committed
277253@main
(21882dfaf512): <
https://commits.webkit.org/277253@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470836
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug